Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/Music_Store_Accounts__c.object-meta.xml
<CustomObject>
    <description>Custom Accounts object</description>
    <label>Music Store Account</label>
    <nameField>
        <label>Music Store Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music Store Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>