Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Brass_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Brass_Instrument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the user play brass instruments.</description>
    <label>Brass Instrument</label>
    <type>Checkbox</type>
</CustomField>