Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Music Store Accounts</relationshipLabel>
    <relationshipName>Music_Store_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>