Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Instrument_Woodwind__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Woodwind__c</fullName>
    <label>Instrument Woodwind</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saxaphone</fullName>
            </value>
            <value>
                <fullName>Clairnet</fullName>
            </value>
            <value>
                <fullName>Flute</fullName>
            </value>
            <value>
                <fullName>Recorder</fullName>
            </value>
            <value>
                <fullName>Oboe</fullName>
            </value>
            <value>
                <fullName>Bassoon</fullName>
            </value>
            <value>
                <fullName>Piccolo</fullName>
            </value>
            <value>
                <fullName>Bansuri</fullName>
            </value>
            <value>
                <fullName>Dizi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>