Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Instruments_Brass__c.field-meta.xml
<CustomField>
    <fullName>Instruments_Brass__c</fullName>
    <label>Instruments Brass</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trumpet</fullName>
            </value>
            <value>
                <fullName>Trombone</fullName>
            </value>
            <value>
                <fullName>French horn</fullName>
            </value>
            <value>
                <fullName>Tuba</fullName>
            </value>
            <value>
                <fullName>Euphonium</fullName>
            </value>
            <value>
                <fullName>Cornet</fullName>
            </value>
            <value>
                <fullName>Flugel</fullName>
            </value>
            <value>
                <fullName>Horn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>