Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Instruments_Percussion__c.field-meta.xml
<CustomField>
    <fullName>Instruments_Percussion__c</fullName>
    <label>Instruments Percussion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Piano</fullName>
            </value>
            <value>
                <fullName>Drums</fullName>
            </value>
            <value>
                <fullName>Xylophone</fullName>
            </value>
            <value>
                <fullName>Cymbal</fullName>
            </value>
            <value>
                <fullName>Tambourine</fullName>
            </value>
            <value>
                <fullName>Marimba</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>