Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Instruments_String__c.field-meta.xml
<CustomField>
    <fullName>Instruments_String__c</fullName>
    <label>Instruments String</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guitar</fullName>
            </value>
            <value>
                <fullName>Violin</fullName>
            </value>
            <value>
                <fullName>Harp</fullName>
            </value>
            <value>
                <fullName>Sitar</fullName>
            </value>
            <value>
                <fullName>Bass</fullName>
            </value>
            <value>
                <fullName>Viola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>