Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Percussion_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Percussion_Instruments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the account play any percussion instruments?</description>
    <label>Percussion Instruments</label>
    <type>Checkbox</type>
</CustomField>