Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/String_Instrument__c.field-meta.xml
<CustomField>
    <fullName>String_Instrument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the account play string instruments.</description>
    <label>String Instrument</label>
    <type>Checkbox</type>
</CustomField>