Revature Meusic Store - P1/force-app/main/default/objects/Music_Store_Accounts__c/fields/Woodwind_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Woodwind_Instruments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the account play any woodwind instruments?</description>
    <label>Woodwind Instruments</label>
    <type>Checkbox</type>
</CustomField>